# drf_shoestore_backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
api/: models.py  serializers.py  views.py
api/management/commands/: bootstrap_data.py
api/migrations/: 0001_initial.py
django_rest_server/: asgi.py  settings.py  urls.py  wsgi.py
templates/: bootstrap_data.py
